{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 47,
  "lineage": "c681fa49-a87c-aa2b-5bcb-38be1f201cbc",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:loadbalancer/app/beverage-vending-alb/ed3b41e2b30c2b0b",
            "arn_suffix": "app/beverage-vending-alb/ed3b41e2b30c2b0b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "beverage-vending-alb-1464387750.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:loadbalancer/app/beverage-vending-alb/ed3b41e2b30c2b0b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "beverage-vending-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0efed89b164710467"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04aef4636a0f98163"
              },
              {
                "subnet_id": "subnet-0babfc54db2957764"
              }
            ],
            "subnets": [
              "subnet-04aef4636a0f98163",
              "subnet-0babfc54db2957764"
            ],
            "vpc_id": "vpc-07137e434fdf11de0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:listener/app/beverage-vending-alb/ed3b41e2b30c2b0b/5e20965f03a7acd5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:targetgroup/beverage-vending-tg/73f00f5d50832582",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:listener/app/beverage-vending-alb/ed3b41e2b30c2b0b/5e20965f03a7acd5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:loadbalancer/app/beverage-vending-alb/ed3b41e2b30c2b0b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.app",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:targetgroup/beverage-vending-tg/73f00f5d50832582",
            "arn_suffix": "targetgroup/beverage-vending-tg/73f00f5d50832582",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:targetgroup/beverage-vending-tg/73f00f5d50832582",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "beverage-vending-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089044c7486178786",
            "domain": "vpc",
            "id": "eipalloc-089044c7486178786",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-216-161-16.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.161.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "beverage-vending-nat-eip"
            },
            "tags_all": {
              "Name": "beverage-vending-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:internet-gateway/igw-01f8af07dc1a39993",
            "id": "igw-01f8af07dc1a39993",
            "owner_id": "779676101573",
            "tags": {
              "Name": "beverage-vending-igw"
            },
            "tags_all": {
              "Name": "beverage-vending-igw"
            },
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089044c7486178786",
            "association_id": "eipassoc-07c75ec8503a9cd72",
            "connectivity_type": "public",
            "id": "nat-0270c899b81b5c0a0",
            "network_interface_id": "eni-014d746231a34dd92",
            "private_ip": "10.0.0.40",
            "public_ip": "54.216.161.16",
            "subnet_id": "subnet-0babfc54db2957764",
            "tags": {
              "Name": "beverage-vending-nat-gw"
            },
            "tags_all": {
              "Name": "beverage-vending-nat-gw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:route-table/rtb-08734fc4ca2e9138e",
            "id": "rtb-08734fc4ca2e9138e",
            "owner_id": "779676101573",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0270c899b81b5c0a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "beverage-vending-private-rt"
            },
            "tags_all": {
              "Name": "beverage-vending-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:route-table/rtb-0b56d680bee92aecd",
            "id": "rtb-0b56d680bee92aecd",
            "owner_id": "779676101573",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f8af07dc1a39993",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "beverage-vending-public-rt"
            },
            "tags_all": {
              "Name": "beverage-vending-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059a844886cd11a52",
            "route_table_id": "rtb-08734fc4ca2e9138e",
            "subnet_id": "subnet-08f937bd21e02d097"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072f199d975cd753c",
            "route_table_id": "rtb-08734fc4ca2e9138e",
            "subnet_id": "subnet-0c481cb29b34e1664"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781a555a43f34549",
            "route_table_id": "rtb-0b56d680bee92aecd",
            "subnet_id": "subnet-0babfc54db2957764"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4a761c68400e4e0",
            "route_table_id": "rtb-0b56d680bee92aecd",
            "subnet_id": "subnet-04aef4636a0f98163"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:security-group/sg-0efed89b164710467",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efed89b164710467",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "beverage-vending-alb-sg",
            "name_prefix": "",
            "owner_id": "779676101573",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:security-group/sg-067fd2bd2bdfbf0b3",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067fd2bd2bdfbf0b3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0efed89b164710467"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "beverage-vending-ecs-sg",
            "name_prefix": "",
            "owner_id": "779676101573",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:security-group/sg-07b5f49f7ba2aac73",
            "description": "Allow TCP 3000 from API Gateway VPC Link",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b5f49f7ba2aac73",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "beverage-vending-nlb-sg",
            "name_prefix": "",
            "owner_id": "779676101573",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:subnet/subnet-08f937bd21e02d097",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f937bd21e02d097",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779676101573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beverage-vending-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "beverage-vending-private-eu-west-1a"
            },
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:subnet/subnet-0c481cb29b34e1664",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c481cb29b34e1664",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779676101573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beverage-vending-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "beverage-vending-private-eu-west-1b"
            },
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:subnet/subnet-0babfc54db2957764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0babfc54db2957764",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779676101573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beverage-vending-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "beverage-vending-public-eu-west-1a"
            },
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:subnet/subnet-04aef4636a0f98163",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aef4636a0f98163",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779676101573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beverage-vending-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "beverage-vending-public-eu-west-1b"
            },
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:vpc/vpc-07137e434fdf11de0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f6b40381ad5b8f0",
            "default_route_table_id": "rtb-0a40f147c858b2c09",
            "default_security_group_id": "sg-02f5bc9143736a8a4",
            "dhcp_options_id": "dopt-0f2d7947d8287f811",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07137e434fdf11de0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a40f147c858b2c09",
            "owner_id": "779676101573",
            "tags": {
              "Name": "beverage-vending-vpc"
            },
            "tags_all": {
              "Name": "beverage-vending-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:vpc-endpoint/vpce-04d87c448dc70fa00",
            "dns_entry": [
              {
                "dns_name": "vpce-04d87c448dc70fa00-7l5r7mj2.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-04d87c448dc70fa00-7l5r7mj2-eu-west-1b.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-04d87c448dc70fa00-7l5r7mj2-eu-west-1a.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-04d87c448dc70fa00",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-005e13147e65d848c",
              "eni-0e1123bdf3565cbe1"
            ],
            "owner_id": "779676101573",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-067fd2bd2bdfbf0b3"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-08f937bd21e02d097",
              "subnet-0c481cb29b34e1664"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ecs",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:779676101573:vpc-endpoint/vpce-0cb69dd0502701b45",
            "dns_entry": [
              {
                "dns_name": "vpce-0cb69dd0502701b45-zhetkdoe.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0cb69dd0502701b45-zhetkdoe-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0cb69dd0502701b45-zhetkdoe-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0cb69dd0502701b45",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-009e4d95f405ade03",
              "eni-09bcb98eb1ea4813d"
            ],
            "owner_id": "779676101573",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-067fd2bd2bdfbf0b3"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-08f937bd21e02d097",
              "subnet-0c481cb29b34e1664"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ecs",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "vpc_link_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:loadbalancer/net/beverage-vending-vpc-link-nlb/8e8e7b69fd01040f",
            "arn_suffix": "net/beverage-vending-vpc-link-nlb/8e8e7b69fd01040f",
            "dns_name": "beverage-vending-vpc-link-nlb-8e8e7b69fd01040f.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:loadbalancer/net/beverage-vending-vpc-link-nlb/8e8e7b69fd01040f",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "beverage-vending-vpc-link-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f937bd21e02d097"
              },
              {
                "subnet_id": "subnet-0c481cb29b34e1664"
              }
            ],
            "subnets": [
              "subnet-08f937bd21e02d097",
              "subnet-0c481cb29b34e1664"
            ],
            "tags": {
              "Name": "beverage-vending-vpc-link-nlb"
            },
            "tags_all": {
              "Name": "beverage-vending-vpc-link-nlb"
            },
            "vpc_id": "vpc-07137e434fdf11de0",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:listener/net/beverage-vending-vpc-link-nlb/8e8e7b69fd01040f/9e158c9ab5e6b8fe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:targetgroup/beverage-vending-vpc-link-tg/d73f48bfe501cb95",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:listener/net/beverage-vending-vpc-link-nlb/8e8e7b69fd01040f/9e158c9ab5e6b8fe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:loadbalancer/net/beverage-vending-vpc-link-nlb/8e8e7b69fd01040f",
            "port": 3000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.nlb.aws_lb.vpc_link_nlb",
            "module.nlb.aws_lb_target_group.vpc_link"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:targetgroup/beverage-vending-vpc-link-tg/d73f48bfe501cb95",
            "arn_suffix": "targetgroup/beverage-vending-vpc-link-tg/d73f48bfe501cb95",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:779676101573:targetgroup/beverage-vending-vpc-link-tg/d73f48bfe501cb95",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "beverage-vending-vpc-link-tg",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07137e434fdf11de0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}